src/main/java/com/example/zavodliva/user/errors/ImageNotFoundException.java
package com.example.zavodliva.user.errors;

public class ImageNotFoundException extends RuntimeException {

	public ImageNotFoundException(String message) {
		super(message);
		// TODO Auto-generated constructor stub
	}

}
